Se aniade imagen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     Sobre Mi ⚡
     Contactame 
     </div>
+    <div class="contenedor-img">
+        <img src="img/Recurso10.png" alt="" height="200px" width="200px" >
+    </div>
     <div class="contenedor" >
         <p>
         <span class="negrita textoInicial">
